Fixed overflow for timer

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html,body
 	background:#eee;
 	transition: width 1s;
 	margin: 5% auto;
+	margin-bottom:10px;
 	padding:50px;
 	font-size:20;
 	width: 80%;
@@ -44,7 +45,7 @@ html,body
      1px 1px 0 #000;
 	margin-right:10px;
 	clear:both;	
-	font-size:30;
+	font-size:20;
 }
 .slide h1
 {
